classDiagram

    namespace CustomApi {
        class UsersController {
            <<AspNetController>>
        }
        class IssuesController {
            <<AspNetController>>
        }
        class CommentsController {
            <<AspNetController>>
        }
    }

    namespace CustomLib {
        class AbstractInterface~ResourceRead, ResourceQuery, ResourceCreate, ResourceUpdate~ {
            <<Interface>>
            +List~ResourceRead~ Find(ResourceQuery query)
            +ResourceRead Create(ResourceCreate data)
            +ResourceRead Read(string identifier)
            +ResourceRead Update(string identifier, ResourceUpdate data)
            +ResourceRead Delete(string identifier)
        }
    }

    namespace CustomSdk {
        class AbstractClient~ResourceRead, ResourceQuery, ResourceCreate, ResourceUpdate~ {
            <<Abstract>>
            -string _resourceName
            -HttpClient _client
            +List~ResourceRead~ Find(ResourceQuery query)
            +ResourceRead Create(ResourceCreate data)
            +ResourceRead Read(string identifier)
            +ResourceRead Update(string identifier, ResourceUpdate data)
            +ResourceRead Delete(string identifier)
            -T Parse~T~(HttpResponseMessage response)
        }

        class UsersClient
        class IssuesClient
        class CommentsClient
    }

    UsersController --|> AbstractInterface : indirectly
    IssuesController --|> AbstractInterface : indirectly
    CommentsController --|> AbstractInterface : indirectly

    AbstractInterface <|-- AbstractClient

    AbstractClient <|-- UsersClient
    AbstractClient <|-- IssuesClient
    AbstractClient <|-- CommentsClient

    style AbstractClient fill:yellow